# books-library

./: .env  Dockerfile  Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 5effdcc6901a_init_db.py
app/: auth.py  database.py  main.py  schema.py  settings.py
app/routes/: auth.py  authors.py  books.py  borrow_record.py  users.py
data/: dev.db
